--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,11 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url 'http://files.boxfuse.com' }
     }
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE")
-        //classpath "gradle.plugin.com.boxfuse.client:client:1.20.4.1035"
+        classpath "com.boxfuse.client:boxfuse-gradle-plugin:1.20.8.1057"
     }
 }
 
@@ -17,12 +18,13 @@ repositories {
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'spring-boot'
-//apply plugin: "com.boxfuse.client"
+apply plugin: 'boxfuse'
 
 compileJava {
     options.compilerArgs << '-parameters'
 }
 
+project.version = '0.2.0';
 
 dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
@@ -30,3 +32,12 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
 }
+
+boxfuse {
+    user= System.getenv('BOXFUSE_USER')
+    secret=System.getenv('BOXFUSE_SECRET')
+    env='prod'
+    app='user-service'
+    healthcheckPath='/alive'
+}
+
