--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -24,6 +24,7 @@ compileJava {
     options.compilerArgs << '-parameters'
 }
 
+//project.name ='user-service'
 project.version = '0.2.0';
 
 dependencies {
