--- a/rest-client/build.gradle
+++ b/rest-client/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath("org.springframework.boot:spring-boot-gradle-plugin:1.3.6.RELEASE")
         classpath "com.boxfuse.client:boxfuse-gradle-plugin:1.20.8.1057"
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.13.0'
     }
 }
 
@@ -18,4 +19,11 @@ apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'spring-boot'
 apply plugin: 'boxfuse'
+apply plugin: 'com.github.ben-manes.versions'
 
+dependencies {
+    compile("org.springframework.boot:spring-boot-devtools")
+    compile("org.springframework.boot:spring-boot-starter-web")
+    compile("org.springframework.boot:spring-boot-starter-hateoas")
+    compile ("org.springframework.cloud:spring-cloud-starter-feign:1.0.4.RELEASE")
+}
