Finishes all clientside methods. Fixes issue with spring-hateoas id mapping

--- a/classes/production/rest-client/application.properties
+++ b/classes/production/rest-client/application.properties
@@ -1,2 +1,7 @@
 server.port=8081
 logging.level.root=INFO
+
+userService.ribbon.listOfServers=localhost:8080,localhost:8090
+userService.ribbon.eureka.enabled=false
+userService.ribbon.MaxAutoRetries=1
+userService.ribbon.MaxAutoRetriesNextServer=1
