--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-#spring.data.mongodb.host= 52.58.20.5
-#spring.data.mongodb.uri=mongodb://52.58.20.5/test
+#TODO: Add AWS profile to distinguish with local test
+spring.data.mongodb.host=172.31.7.194
+spring.data.mongodb.uri=mongodb://172.31.7.194/test
 spring.data.mongodb.repositories.enabled=true
