Playing around with Swagger

--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -24,13 +24,15 @@ compileJava {
     options.compilerArgs << '-parameters'
 }
 
-project.version = '0.3.1';
+project.version = '0.4.0-SNAPSHOT'
 
 dependencies {
     compile("org.springframework.boot:spring-boot-devtools")
     compile("org.springframework.boot:spring-boot-starter-data-mongodb")
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-data-rest")
+    compile "io.springfox:springfox-swagger2:2.6.1"
+    compile "io.springfox:springfox-swagger-ui:2.6.1"
 }
 
 boxfuse {
